Limpeza 2.0: removida pasta Project/.vscode

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 tags
 Project/PSJ/.editorconfig
 Project/.idea/
+Project/.vscode/
 Project/CalcDateTimeApp/.idea/
 Project/CalcDateTimeApp/out/
 Project/CalcDateTimeApp/META-INF/
