--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Project/CalcDateTimeApp/.gitattributes
 Project/CalcDateTimeApp/.gitignore
 Project/CalcDateTimeApp/.travis.yml
 BenchJavaStreams/.idea/
+TransCaixa/
