--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@ Project/CalcDateTimeApp/.gitattributes
 Project/CalcDateTimeApp/.gitignore
 Project/CalcDateTimeApp/.travis.yml
 BenchJavaStreams/.idea/
-TransCaixa/
 BenchJavaStreams/target/
+BenchJavaStreams/TransCaixaResources/
